Adding Auth to api
